tests/errors/regexp_constructor_invalid.dang
# The Regexp(...) constructor compile-checks its argument, so an invalid
# pattern raises at the call, naming the pattern.
let bad = Regexp("(")
